--- a/package.json
+++ b/package.json
@@ -109,11 +109,15 @@
     }
   },
   "dependencies": {
+    "@ramonak/react-progress-bar": "^5.0.3",
+    "axios": "^1.2.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-keyevent": "^1.1.0",
+    "react-player": "^2.11.0",
     "react-router-dom": "^6.4.0"
   },
   "devDependencies": {
