--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.0.3",
     "@types/nedb": "^1.8.12",
+    "applescript": "^1.0.0",
     "axios": "^1.2.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
@@ -121,6 +122,7 @@
     "react-keyevent": "^1.1.0",
     "react-player": "^2.11.0",
     "react-router-dom": "^6.4.0",
+    "run-applescript": "^6.0.0",
     "tencentcloud-sdk-nodejs": "^4.0.489"
   },
   "devDependencies": {
