--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "react-dom": "^18.2.0",
     "react-keyevent": "^1.1.0",
     "react-player": "^2.11.0",
+    "react-resizable-layout": "^0.4.0",
     "react-router-dom": "^6.4.0",
     "run-applescript": "^6.0.0",
     "tencentcloud-sdk-nodejs": "^4.0.489"
