--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
         "nedb": "^1.8.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.11.0",
         "react-keyevent": "^1.1.0",
         "react-player": "^2.11.0",
         "react-resizable-layout": "^0.4.0",
