--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
         }
     },
     "dependencies": {
+        "@floating-ui/react": "^0.25.4",
         "@ramonak/react-progress-bar": "^5.0.3",
         "applescript": "^1.0.0",
         "axios": "^1.2.0",
@@ -121,7 +122,6 @@
         "react-dom": "^18.2.0",
         "react-icons": "^4.11.0",
         "react-keyevent": "^1.1.0",
-        "react-player": "^2.11.0",
         "react-resizable-layout": "^0.4.0",
         "react-router-dom": "^6.4.0",
         "react-virtuoso": "^4.2.0",
