--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
         "@floating-ui/react": "^0.25.4",
         "@ramonak/react-progress-bar": "^5.0.3",
         "applescript": "^1.0.0",
-        "axios": "^1.2.0",
+        "axios": "^1.5.0",
         "electron-debug": "^3.2.0",
         "electron-log": "^4.4.8",
         "electron-updater": "^5.2.3",
@@ -125,6 +125,7 @@
         "react-resizable-layout": "^0.4.0",
         "react-router-dom": "^6.4.0",
         "react-virtuoso": "^4.2.0",
+        "request": "^2.88.2",
         "run-applescript": "^6.0.0",
         "tencentcloud-sdk-nodejs": "^4.0.489"
     },
@@ -140,6 +141,7 @@
         "@types/react": "^18.0.17",
         "@types/react-dom": "^18.0.6",
         "@types/react-test-renderer": "^18.0.0",
+        "@types/request": "^2.48.8",
         "@types/terser-webpack-plugin": "^5.0.4",
         "@types/webpack-bundle-analyzer": "^4.4.2",
         "@typescript-eslint/eslint-plugin": "^5.33.1",
