--- a/package.json
+++ b/package.json
@@ -112,6 +112,8 @@
     "dependencies": {
         "@floating-ui/react": "^0.25.4",
         "@ramonak/react-progress-bar": "^5.0.3",
+        "@turf/convex": "^6.5.0",
+        "@turf/turf": "^6.5.0",
         "applescript": "^1.0.0",
         "axios": "^1.5.0",
         "electron-debug": "^3.2.0",
