--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
         "react-keyevent": "^1.1.0",
         "react-resizable-layout": "^0.4.0",
         "react-router-dom": "^6.4.0",
+        "react-split": "^2.0.14",
         "react-virtuoso": "^4.2.0",
         "request": "^2.88.2",
         "run-applescript": "^6.0.0",
