--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
         "electron-log": "^4.4.8",
         "electron-updater": "^5.2.3",
         "nedb": "^1.8.0",
+        "play-sound": "^1.1.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.11.0",
@@ -141,6 +142,7 @@
         "@types/jest": "^28.1.7",
         "@types/nedb": "^1.8.12",
         "@types/node": "18.7.6",
+        "@types/play-sound": "^1.1.0",
         "@types/react": "^18.0.17",
         "@types/react-dom": "^18.0.6",
         "@types/react-test-renderer": "^18.0.0",
