--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
         "electron-debug": "^3.2.0",
         "electron-log": "^4.4.8",
         "electron-updater": "^5.2.3",
+        "lru-cache": "^10.0.1",
         "nedb": "^1.8.0",
         "play-sound": "^1.1.6",
         "react": "^18.2.0",
