--- a/package.json
+++ b/package.json
@@ -194,6 +194,7 @@
         "sass": "^1.54.4",
         "sass-loader": "^13.0.2",
         "style-loader": "^3.3.1",
+        "tailwind-scrollbar": "^3.0.5",
         "tailwindcss": "^3.2.4",
         "terser-webpack-plugin": "^5.3.5",
         "ts-jest": "^28.0.8",
