--- a/package.json
+++ b/package.json
@@ -195,6 +195,7 @@
         "style-loader": "^3.3.1",
         "tailwind-scrollbar": "^3.0.5",
         "tailwindcss": "^3.2.4",
+        "tailwindcss-themer": "^3.1.2",
         "terser-webpack-plugin": "^5.3.5",
         "ts-jest": "^28.0.8",
         "ts-loader": "^9.3.1",
