--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     },
     "dependencies": {
         "@floating-ui/react": "^0.25.4",
+        "@radix-ui/react-slider": "^1.1.2",
         "@ramonak/react-progress-bar": "^5.0.3",
         "@turf/convex": "^6.5.0",
         "@turf/turf": "^6.5.0",
@@ -127,6 +128,7 @@
         "react-player": "^2.13.0",
         "react-resizable-layout": "^0.4.0",
         "react-router-dom": "^6.4.0",
+        "react-slider": "^2.0.6",
         "react-split": "^2.0.14",
         "react-virtuoso": "^4.2.0",
         "request": "^2.88.2",
@@ -145,6 +147,7 @@
         "@types/node": "18.7.6",
         "@types/react": "^18.0.17",
         "@types/react-dom": "^18.0.6",
+        "@types/react-slider": "^1.3.2",
         "@types/react-test-renderer": "^18.0.0",
         "@types/request": "^2.48.8",
         "@types/terser-webpack-plugin": "^5.0.4",
