--- a/.github/workflows/deploy-doc.yml
+++ b/.github/workflows/deploy-doc.yml
@@ -4,7 +4,7 @@ on:
     # If specified, the workflow will be triggered automatically once you push to the `main` branch.
     # Replace `main` with your branch’s name
     push:
-        branches: [ "main" ]
+        branches: ['main']
     # Specify to run a workflow manually from the Actions tab on GitHub
     workflow_dispatch:
 
@@ -24,7 +24,7 @@ env:
     # Replace HI with the ID of the instance in capital letters
     ALGOLIA_ARTIFACT: algolia-indexes-DP.zip
     ALGOLIA_APP_NAME: A8V0XP1IG6
-    ALGOLIA_INDEX_NAME: Dash Player Docs
+    ALGOLIA_INDEX_NAME: dash_player_docs
     ALGOLIA_KEY: ${{ secrets.ALGOLIA_KEY }}
     CONFIG_JSON_PRODUCT: dp
     CONFIG_JSON_VERSION: 2.0
@@ -34,32 +34,32 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            -   name: Checkout repository
-                uses: actions/checkout@v3
+            - name: Checkout repository
+              uses: actions/checkout@v3
 
-            -   name: Build Writerside docs using Docker
-                uses: JetBrains/writerside-github-action@v4
-                with:
-                    instance: ${{ env.INSTANCE }}
-                    artifact: ${{ env.ARTIFACT }}
-                    docker-version: ${{ env.DOCKER_VERSION }}
+            - name: Build Writerside docs using Docker
+              uses: JetBrains/writerside-github-action@v4
+              with:
+                  instance: ${{ env.INSTANCE }}
+                  artifact: ${{ env.ARTIFACT }}
+                  docker-version: ${{ env.DOCKER_VERSION }}
 
-            -   name: Upload documentation
-                uses: actions/upload-artifact@v3
-                with:
-                    name: docs
-                    path: |
-                        artifacts/${{ env.ARTIFACT }}
-                        artifacts/report.json
-                    retention-days: 7
+            - name: Upload documentation
+              uses: actions/upload-artifact@v3
+              with:
+                  name: docs
+                  path: |
+                      artifacts/${{ env.ARTIFACT }}
+                      artifacts/report.json
+                  retention-days: 7
 
             # Add the step below to upload Algolia indexes
-            -   name: Upload algolia-indexes
-                uses: actions/upload-artifact@v3
-                with:
-                    name: algolia-indexes
-                    path: artifacts/${{ env.ALGOLIA_ARTIFACT }}
-                    retention-days: 7
+            - name: Upload algolia-indexes
+              uses: actions/upload-artifact@v3
+              with:
+                  name: algolia-indexes
+                  path: artifacts/${{ env.ALGOLIA_ARTIFACT }}
+                  retention-days: 7
 
     # Add the job below and artifacts/report.json on Upload documentation step above if you want to fail the build when documentation contains errors
     test:
@@ -68,16 +68,16 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            -   name: Download artifacts
-                uses: actions/download-artifact@v1
-                with:
-                    name: docs
-                    path: artifacts
+            - name: Download artifacts
+              uses: actions/download-artifact@v1
+              with:
+                  name: docs
+                  path: artifacts
 
-            -   name: Test documentation
-                uses: JetBrains/writerside-checker-action@v1
-                with:
-                    instance: ${{ env.INSTANCE }}
+            - name: Test documentation
+              uses: JetBrains/writerside-checker-action@v1
+              with:
+                  instance: ${{ env.INSTANCE }}
 
     deploy:
         environment:
@@ -87,27 +87,27 @@ jobs:
         needs: test
         runs-on: ubuntu-latest
         steps:
-            -   name: Download artifact
-                uses: actions/download-artifact@v3
-                with:
-                    name: docs
+            - name: Download artifact
+              uses: actions/download-artifact@v3
+              with:
+                  name: docs
 
-            -   name: Unzip artifact
-                uses: montudor/action-zip@v1
-                with:
-                    args: unzip -qq ${{ env.ARTIFACT }} -d dir
+            - name: Unzip artifact
+              uses: montudor/action-zip@v1
+              with:
+                  args: unzip -qq ${{ env.ARTIFACT }} -d dir
 
-            -   name: Setup Pages
-                uses: actions/configure-pages@v2
+            - name: Setup Pages
+              uses: actions/configure-pages@v2
 
-            -   name: Upload artifact
-                uses: actions/upload-pages-artifact@v1
-                with:
-                    path: dir
+            - name: Upload artifact
+              uses: actions/upload-pages-artifact@v1
+              with:
+                  path: dir
 
-            -   name: Deploy to GitHub Pages
-                id: deployment
-                uses: actions/deploy-pages@v1
+            - name: Deploy to GitHub Pages
+              id: deployment
+              uses: actions/deploy-pages@v1
 
     publish-indexes:
         # Requires the build-job results
@@ -117,19 +117,19 @@ jobs:
             image: registry.jetbrains.team/p/writerside/builder/algolia-publisher:2.0.32-2
 
         steps:
-            -   uses: actions/checkout@v3
-            -   uses: actions/download-artifact@v3
-                with:
-                    name: algolia-indexes
-            -   uses: montudor/action-zip@v1
-                with:
-                    args: unzip -qq ${{ env.ALGOLIA_ARTIFACT }} -d algolia-indexes
-            -   run: |
-                    env "algolia-key=${{env.ALGOLIA_KEY}}" java -jar /opt/builder/help-publication-agent.jar \
-                    update-index \
-                    --application-name ${{env.ALGOLIA_APP_NAME}} \
-                    --index-name ${{env.ALGOLIA_INDEX_NAME}} \
-                    --product ${{env.CONFIG_JSON_PRODUCT}} \
-                    --version ${{env.CONFIG_JSON_VERSION}} \
-                    --index-directory algolia-indexes/ \
-                    2>&1 | tee algolia-update-index-log.txt
+            - uses: actions/checkout@v3
+            - uses: actions/download-artifact@v3
+              with:
+                  name: algolia-indexes
+            - uses: montudor/action-zip@v1
+              with:
+                  args: unzip -qq ${{ env.ALGOLIA_ARTIFACT }} -d algolia-indexes
+            - run: |
+                  env "algolia-key=${{env.ALGOLIA_KEY}}" java -jar /opt/builder/help-publication-agent.jar \
+                  update-index \
+                  --application-name ${{env.ALGOLIA_APP_NAME}} \
+                  --index-name ${{env.ALGOLIA_INDEX_NAME}} \
+                  --product ${{env.CONFIG_JSON_PRODUCT}} \
+                  --version ${{env.CONFIG_JSON_VERSION}} \
+                  --index-directory algolia-indexes/ \
+                  2>&1 | tee algolia-update-index-log.txt
