--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -4,5 +4,6 @@
 <ihp version="2.0">
     <topics dir="topics" web-path="topics"/>
     <images dir="images" web-path="images"/>
-    <instance src="dp.tree" web-path="DashPlayer" version="1.0"/>
+    <vars src="v.list"/>
+    <instance src="dp.tree"/>
 </ihp>
