--- a/package.json
+++ b/package.json
@@ -121,8 +121,10 @@
         "electron-debug": "^3.2.0",
         "electron-log": "^4.4.8",
         "electron-updater": "^5.2.3",
+        "knex-paginate": "^3.1.1",
         "nedb": "^1.8.0",
         "react": "^18.2.0",
+        "react-data-grid": "^7.0.0-beta.40",
         "react-dom": "^18.2.0",
         "react-icons": "^4.11.0",
         "react-keyevent": "^1.1.0",
