--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
         "knex-paginate": "^3.1.1",
         "monaco-editor": "^0.44.0",
         "monaco-editor-webpack-plugin": "^7.1.0",
+        "natural": "^6.8.0",
         "nedb": "^1.8.0",
         "node-sql-parser": "^4.11.0",
         "react": "^18.2.0",
