--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
         "electron-debug": "^3.2.0",
         "electron-log": "^4.4.8",
         "electron-updater": "^5.2.3",
+        "framer-motion": "^10.16.12",
         "knex-paginate": "^3.1.1",
         "monaco-editor": "^0.44.0",
         "natural": "^6.8.0",
@@ -135,7 +136,7 @@
         "react-keyevent": "^1.1.0",
         "react-player": "^2.13.0",
         "react-resizable-layout": "^0.4.0",
-        "react-router-dom": "^6.4.0",
+        "react-router-dom": "^6.20.1",
         "react-slider": "^2.0.6",
         "react-split": "^2.0.14",
         "react-virtuoso": "^4.2.0",
