--- a/package.json
+++ b/package.json
@@ -117,7 +117,11 @@
         "@ramonak/react-progress-bar": "^5.0.3",
         "@turf/convex": "^6.5.0",
         "@turf/turf": "^6.5.0",
+        "ag-grid-community": "^31.0.0",
+        "ag-grid-enterprise": "^31.0.0",
+        "ag-grid-react": "^31.0.0",
         "applescript": "^1.0.0",
+        "atob": "^2.1.2",
         "axios": "^1.5.0",
         "clsx": "^2.0.0",
         "drizzle-orm": "^0.29.1",
