--- a/package.json
+++ b/package.json
@@ -204,7 +204,7 @@
         "mini-css-extract-plugin": "^2.6.1",
         "postcss": "^8.4.19",
         "postcss-loader": "^7.0.2",
-        "prettier": "^2.7.1",
+        "prettier": "2.8.8",
         "react-refresh": "^0.14.0",
         "react-test-renderer": "^18.2.0",
         "rimraf": "^3.0.2",
