--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
         "package": "ts-node ./.erb/scripts/clean.js dist && npm run build && electron-builder build --publish never",
         "package:all": "ts-node ./.erb/scripts/clean.js dist && npm run build && electron-builder build --publish never --win --mac --linux",
         "prepare": "husky install",
-        "rebuild": "electron-rebuild --arch=x64,arm64 --parallel --types prod,dev,optional --module-dir release/app",
+        "rebuild": "electron-rebuild --parallel --types prod,dev,optional --module-dir release/app",
         "start": "ts-node ./.erb/scripts/check-port-in-use.js && npm run start:renderer",
         "start:main": "cross-env NODE_ENV=development electronmon -r ts-node/register/transpile-only .",
         "start:preload": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.preload.dev.ts",
