--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
         "react": "^18.2.0",
         "react-data-grid": "^7.0.0-beta.40",
         "react-dom": "^18.2.0",
+        "react-hot-toast": "^2.4.1",
         "react-icons": "^4.11.0",
         "react-keyevent": "^1.1.0",
         "react-player": "^2.13.0",
