--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@electron-forge/plugin-fuses": "^7.2.0",
         "@electron-forge/plugin-vite": "^7.3.1",
         "@electron/fuses": "^1.7.0",
+        "@types/react-dom": "^18.2.24",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
         "autoprefixer": "^10.4.17",
