--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@electron-forge/plugin-vite": "^7.3.1",
         "@electron/fuses": "^1.7.0",
         "@types/react-dom": "^18.2.24",
+        "@types/react-syntax-highlighter": "^15.5.11",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
         "autoprefixer": "^10.4.17",
@@ -52,6 +53,7 @@
         "@floating-ui/react": "^0.26.9",
         "@hookform/resolvers": "^3.3.4",
         "@radix-ui/react-checkbox": "^1.0.4",
+        "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-popover": "^1.0.7",
         "@radix-ui/react-slider": "^1.1.2",
@@ -89,15 +91,20 @@
         "react-hot-toast": "^2.4.1",
         "react-icons": "^4.12.0",
         "react-keyevent": "^1.1.0",
+        "react-markdown": "8.0.7",
         "react-player": "^2.14.1",
         "react-resizable-panels": "^2.0.12",
         "react-router-dom": "^6.21.0",
         "react-split": "^2.0.14",
+        "react-syntax-highlighter": "^15.5.0",
         "react-virtuoso": "^4.6.2",
+        "remark-gfm": "^4.0.0",
+        "remark-math": "^6.0.0",
         "sonner": "^1.4.3",
         "tailwind-merge": "^2.2.1",
         "tailwindcss-animate": "^1.0.7",
         "tencentcloud-sdk-nodejs": "^4.0.764",
+        "vaul": "^0.9.0",
         "zod": "^3.22.4",
         "zustand": "^4.4.7"
     }
