--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     },
     "dependencies": {
         "@electron-forge/publisher-github": "^7.2.0",
-        "@ffmpeg-installer/ffmpeg": "^1.1.0",
         "@floating-ui/react": "^0.26.9",
         "@hookform/resolvers": "^3.3.4",
         "@radix-ui/react-checkbox": "^1.0.4",
@@ -91,7 +90,7 @@
         "react-hot-toast": "^2.4.1",
         "react-icons": "^4.12.0",
         "react-keyevent": "^1.1.0",
-        "react-markdown": "8.0.7",
+        "react-markdown": "^9.0.1",
         "react-player": "^2.14.1",
         "react-resizable-panels": "^2.0.12",
         "react-router-dom": "^6.21.0",
