--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@electron-forge/plugin-fuses": "^7.2.0",
         "@electron-forge/plugin-vite": "^7.3.1",
         "@electron/fuses": "^1.7.0",
+        "@tailwindcss/typography": "^0.5.12",
         "@types/react-dom": "^18.2.24",
         "@types/react-syntax-highlighter": "^15.5.11",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
