--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "@floating-ui/react": "^0.26.9",
         "@hookform/resolvers": "^3.3.4",
         "@radix-ui/react-checkbox": "^1.0.4",
+        "@radix-ui/react-context-menu": "^2.1.5",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-popover": "^1.0.7",
