--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@electron-forge/plugin-vite": "^7.3.1",
         "@electron/fuses": "^1.7.0",
         "@tailwindcss/typography": "^0.5.12",
+        "@types/common-tags": "^1.8.4",
         "@types/react-dom": "^18.2.24",
         "@types/react-syntax-highlighter": "^15.5.11",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -73,6 +74,7 @@
         "better-sqlite3": "^9.4.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "common-tags": "^1.8.2",
         "compare-versions": "^6.1.0",
         "compromise": "^14.12.0",
         "drizzle-kit": "^0.20.7",
