--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "dash-player",
     "productName": "DashPlayer",
-    "version": "3.0.0",
+    "version": "3.0.1",
     "description": "My Electron application description",
     "main": ".vite/build/main.js",
     "scripts": {
@@ -27,6 +27,7 @@
         "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
         "@electron-forge/plugin-vite": "^7.2.0",
         "@types/better-sqlite3": "^7.6.9",
+        "@types/node": "^20.12.7",
         "@types/react": "^18.2.51",
         "@types/react-dom": "^18.2.18",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
