--- a/package.json
+++ b/package.json
@@ -96,8 +96,8 @@
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.51.0",
         "react-hot-toast": "^2.4.1",
+        "react-hotkeys-hook": "^4.5.0",
         "react-icons": "^4.12.0",
-        "react-keyevent": "^1.1.0",
         "react-markdown": "^9.0.1",
         "react-player": "^2.14.1",
         "react-resizable-panels": "^2.0.12",
