--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@tailwindcss/typography": "^0.5.12",
         "@types/better-sqlite3": "^7.6.10",
         "@types/common-tags": "^1.8.4",
+        "@types/ffprobe-static": "^2.0.3",
         "@types/react-dom": "^18.2.24",
         "@types/react-syntax-highlighter": "^15.5.11",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -60,6 +61,7 @@
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-popover": "^1.0.7",
+        "@radix-ui/react-progress": "^1.0.3",
         "@radix-ui/react-slider": "^1.1.2",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-switch": "^1.0.3",
@@ -85,6 +87,7 @@
         "electron-store": "^8.1.0",
         "eslint-config-react-app": "^7.0.1",
         "ffmpeg-static": "^5.2.0",
+        "ffprobe-static": "^3.1.0",
         "fluent-ffmpeg": "^2.1.2",
         "framer-motion": "^10.16.16",
         "langchain": "^0.1.31",
