更改字幕解析

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@types/better-sqlite3": "^7.6.10",
         "@types/common-tags": "^1.8.4",
         "@types/ffprobe-static": "^2.0.3",
+        "@types/object-hash": "^3.0.6",
         "@types/react-dom": "^18.2.24",
         "@types/react-syntax-highlighter": "^15.5.11",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -95,6 +96,7 @@
         "monaco-editor": "^0.45.0",
         "next-themes": "^0.2.1",
         "node-sql-parser": "^4.17.0",
+        "object-hash": "^3.0.0",
         "openai": "^4.32.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
