--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
         "hi-base32": "^0.5.1",
         "langchain": "^0.1.31",
         "lucide-react": "^0.350.0",
+        "moment": "^2.30.1",
         "monaco-editor": "^0.45.0",
         "next-themes": "^0.2.1",
         "node-sql-parser": "^4.17.0",
