--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
         "openai": "^4.32.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-error-boundary": "^4.0.13",
         "react-hook-form": "^7.51.0",
         "react-hot-toast": "^2.4.1",
         "react-hotkeys-hook": "^4.5.0",
