--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "description": "My Electron application description",
     "main": ".vite/build/main.js",
     "scripts": {
+        "download": "zx ./lib/download.mjs",
         "start": "electron-forge start",
         "package": "electron-forge package",
         "make": "electron-forge make",
@@ -125,6 +126,7 @@
         "vaul": "^0.9.0",
         "zod": "^3.22.4",
         "zod-to-json-schema": "^3.22.5",
-        "zustand": "^4.4.7"
+        "zustand": "^4.4.7",
+        "zx": "^8.0.2"
     }
 }
