--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
         "node-sql-parser": "^4.17.0",
         "object-hash": "^3.0.0",
         "openai": "^4.32.1",
+        "progress": "^2.0.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-error-boundary": "^4.0.13",
