--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-context-menu": "^2.1.5",
         "@radix-ui/react-dialog": "^1.0.5",
+        "@radix-ui/react-dropdown-menu": "^2.0.6",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-popover": "^1.0.7",
         "@radix-ui/react-progress": "^1.0.3",
@@ -95,7 +96,7 @@
         "framer-motion": "^10.16.16",
         "hi-base32": "^0.5.1",
         "langchain": "^0.1.31",
-        "lucide-react": "^0.350.0",
+        "lucide-react": "^0.378.0",
         "moment": "^2.30.1",
         "monaco-editor": "^0.45.0",
         "next-themes": "^0.2.1",
