--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,10 +8,10 @@ jobs:
       matrix:
         os:
           [
-#            { name: 'linux', image: 'ubuntu-latest' },
-            { name: 'windows', image: 'windows-latest' },
-            { name: 'macos-x64', image: 'macos-12' },
-            { name: 'macos-arm64', image: 'macos-14' },
+           { name: 'linux', image: 'ubuntu-latest' },
+            # { name: 'windows', image: 'windows-latest' },
+            # { name: 'macos-x64', image: 'macos-12' },
+            # { name: 'macos-arm64', image: 'macos-14' },
           ]
     runs-on: ${{ matrix.os.image }}
     steps:
