--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,9 +11,9 @@ jobs:
         os:
           [
            { name: 'linux', image: 'ubuntu-latest' },
-            # { name: 'windows', image: 'windows-latest' },
-            # { name: 'macos-x64', image: 'macos-12' },
-            # { name: 'macos-arm64', image: 'macos-14' },
+            { name: 'windows', image: 'windows-latest' },
+            { name: 'macos-x64', image: 'macos-12' },
+            { name: 'macos-arm64', image: 'macos-14' },
           ]
     runs-on: ${{ matrix.os.image }}
     steps:
