--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
         "framer-motion": "^10.16.16",
         "hi-base32": "^0.5.1",
         "iconv-lite": "^0.6.3",
+        "jschardet": "^3.1.2",
         "langchain": "^0.1.31",
         "lucide-react": "^0.378.0",
         "moment": "^2.30.1",
