--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
         "compromise": "^14.12.0",
         "drizzle-kit": "^0.20.7",
         "drizzle-orm": "^0.29.1",
-        "electron-log": "^5.0.1",
+        "electron-log": "^5.2.0",
         "electron-squirrel-startup": "^1.0.0",
         "electron-store": "^8.1.0",
         "embla-carousel-react": "^8.0.2",
@@ -99,6 +99,7 @@
         "framer-motion": "^10.16.16",
         "hi-base32": "^0.5.1",
         "iconv-lite": "^0.6.3",
+        "inversify": "^6.0.2",
         "jschardet": "^3.1.2",
         "langchain": "^0.1.31",
         "lucide-react": "^0.378.0",
@@ -123,6 +124,7 @@
         "react-split": "^2.0.14",
         "react-syntax-highlighter": "^15.5.0",
         "react-virtuoso": "^4.7.8",
+        "reflect-metadata": "^0.2.2",
         "remark-gfm": "^4.0.0",
         "remark-math": "^6.0.0",
         "sonner": "^1.4.41",
