--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
         "@radix-ui/react-aspect-ratio": "^1.1.0",
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-context-menu": "^2.1.5",
-        "@radix-ui/react-dialog": "^1.0.5",
+        "@radix-ui/react-dialog": "^1.1.1",
         "@radix-ui/react-dropdown-menu": "^2.0.6",
         "@radix-ui/react-hover-card": "^1.1.1",
         "@radix-ui/react-label": "^2.0.2",
@@ -83,6 +83,7 @@
         "better-sqlite3": "^9.4.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "cmdk": "1.0.0",
         "common-tags": "^1.8.2",
         "compare-versions": "^6.1.0",
         "compromise": "^14.12.0",
