--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "strict": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "types": ["reflect-metadata"],
