--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
         "@floating-ui/react": "^0.26.9",
         "@hookform/resolvers": "^3.3.4",
+        "@langchain/core": "^0.3.5",
         "@radix-ui/react-aspect-ratio": "^1.1.0",
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-context-menu": "^2.1.5",
@@ -103,7 +104,7 @@
         "iconv-lite": "^0.6.3",
         "inversify": "^6.0.2",
         "jschardet": "^3.1.2",
-        "langchain": "^0.1.31",
+        "langchain": "^0.3.2",
         "lucide-react": "^0.378.0",
         "moment": "^2.30.1",
         "monaco-editor": "^0.45.0",
