--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
         "inversify": "^6.0.2",
         "jschardet": "^3.1.2",
         "langchain": "^0.3.2",
+        "leven": "^4.0.0",
         "lucide-react": "^0.378.0",
         "moment": "^2.30.1",
         "monaco-editor": "^0.45.0",
