--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@types/common-tags": "^1.8.4",
         "@types/ffprobe-static": "^2.0.3",
         "@types/object-hash": "^3.0.6",
+        "@types/parse-filepath": "^1.0.2",
         "@types/react-dom": "^18.2.24",
         "@types/react-syntax-highlighter": "^15.5.11",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -89,8 +90,8 @@
         "compare-versions": "^6.1.0",
         "compromise": "^14.12.0",
         "date-fns": "^3.6.0",
-        "drizzle-kit": "^0.20.7",
-        "drizzle-orm": "^0.29.1",
+        "drizzle-kit": "^0.26.2",
+        "drizzle-orm": "^0.35.2",
         "electron-log": "^5.2.0",
         "electron-squirrel-startup": "^1.0.0",
         "electron-store": "^8.1.0",
@@ -105,7 +106,7 @@
         "inversify": "^6.0.2",
         "jschardet": "^3.1.2",
         "langchain": "^0.3.2",
-        "leven": "^4.0.0",
+        "leven": "^3.1.0",
         "lucide-react": "^0.378.0",
         "moment": "^2.30.1",
         "monaco-editor": "^0.45.0",
