--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
         "make": "yarn run download && electron-forge make",
         "publish": "yarn run download && electron-forge publish",
         "lint": "eslint --ext .ts,.tsx .",
-        "test": "vitest  --config ./vite.main.config.ts"
+        "test": "vitest",
+        "test:ui": "vitest --ui",
+        "test:run": "vitest run",
+        "test:coverage": "vitest run --coverage",
+        "test:watch": "vitest --watch"
     },
     "keywords": [],
     "author": {
@@ -32,6 +36,10 @@
         "@electron-forge/plugin-vite": "^7.4.0",
         "@electron/fuses": "^1.7.0",
         "@tailwindcss/typography": "^0.5.12",
+        "@testing-library/dom": "^10.4.1",
+        "@testing-library/jest-dom": "^6.7.0",
+        "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.6.1",
         "@types/better-sqlite3": "^7.6.10",
         "@types/common-tags": "^1.8.4",
         "@types/ffprobe-static": "^2.0.3",
@@ -42,11 +50,13 @@
         "@types/react-syntax-highlighter": "^15.5.11",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
+        "@vitest/ui": "^3.2.4",
         "autoprefixer": "^10.4.17",
         "electron": "29.2.0",
         "eslint": "^8.0.1",
         "eslint-import-resolver-alias": "^1.1.2",
         "eslint-plugin-import": "^2.25.0",
+        "jsdom": "^26.1.0",
         "postcss": "^8.4.33",
         "tailwind-scrollbar": "^3.1.0",
         "tailwindcss": "^3.4.3",
