--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "ts-node": "^10.0.0",
         "typescript": "~4.5.4",
         "vite": "^5.0.12",
+        "vite-plugin-wasm": "^3.5.0",
         "vitest": "^1.3.1"
     },
     "dependencies": {
@@ -105,6 +106,7 @@
         "date-fns": "^3.6.0",
         "drizzle-kit": "^0.26.2",
         "drizzle-orm": "^0.35.2",
+        "echogarden": "^2.10.1",
         "electron-log": "^5.2.0",
         "electron-squirrel-startup": "^1.0.0",
         "electron-store": "^8.1.0",
