--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "@types/parse-filepath": "^1.0.2",
         "@types/react-dom": "^18.2.24",
         "@types/react-syntax-highlighter": "^15.5.11",
+        "@types/xlsx": "^0.0.36",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
         "@vitest/ui": "^3.2.4",
@@ -156,6 +157,7 @@
         "tencentcloud-sdk-nodejs": "^4.0.764",
         "ts-error": "^1.0.6",
         "vaul": "^0.9.0",
+        "xlsx": "^0.18.5",
         "zod": "^3.23.8",
         "zod-to-json-schema": "^3.22.5",
         "zustand": "^4.4.7",
