--- a/package.json
+++ b/package.json
@@ -44,13 +44,14 @@
         "@types/common-tags": "^1.8.4",
         "@types/ffprobe-static": "^2.0.3",
         "@types/lodash": "^4.17.20",
+        "@types/lru-cache": "^7.10.10",
         "@types/object-hash": "^3.0.6",
         "@types/parse-filepath": "^1.0.2",
         "@types/react-dom": "^18.2.24",
         "@types/react-syntax-highlighter": "^15.5.11",
         "@types/xlsx": "^0.0.36",
-        "@typescript-eslint/eslint-plugin": "^5.0.0",
-        "@typescript-eslint/parser": "^5.0.0",
+        "@typescript-eslint/eslint-plugin": "^7.11.0",
+        "@typescript-eslint/parser": "^7.11.0",
         "@vitest/ui": "^3.2.4",
         "autoprefixer": "^10.4.17",
         "electron": "29.2.0",
@@ -61,8 +62,8 @@
         "postcss": "^8.4.33",
         "tailwind-scrollbar": "^3.1.0",
         "tailwindcss": "^3.4.3",
-        "ts-node": "^10.0.0",
-        "typescript": "~4.5.4",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.4.5",
         "vite": "^5.0.12",
         "vite-plugin-wasm": "^3.5.0",
         "vitest": "^1.3.1"
