--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
         "jsx": "react-jsx",
         "paths": {
             "@/*": [
-                "./src/*",
+                "./src/*"
             ]
         }
     },
