--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
         "eslint": "^8.0.1",
         "eslint-import-resolver-alias": "^1.1.2",
         "eslint-plugin-import": "^2.25.0",
+        "eslint-plugin-jsx-a11y": "^6.8.0",
+        "eslint-plugin-react": "^7.34.2",
+        "eslint-plugin-react-hooks": "^4.6.2",
         "jsdom": "^26.1.0",
         "postcss": "^8.4.33",
         "tailwind-scrollbar": "^3.1.0",
@@ -112,7 +115,6 @@
         "electron-squirrel-startup": "^1.0.0",
         "electron-store": "^8.1.0",
         "embla-carousel-react": "^8.0.2",
-        "eslint-config-react-app": "^7.0.1",
         "ffmpeg-static": "^5.2.0",
         "ffprobe-static": "^3.1.0",
         "fluent-ffmpeg": "^2.1.2",
