--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     },
     "license": "MIT",
     "devDependencies": {
-        "@electron-forge/cli": "^7.4.0",
-        "@electron-forge/maker-deb": "^7.4.0",
-        "@electron-forge/maker-dmg": "^7.4.0",
-        "@electron-forge/maker-rpm": "^7.4.0",
-        "@electron-forge/maker-squirrel": "^7.4.0",
-        "@electron-forge/maker-wix": "^7.4.0",
-        "@electron-forge/maker-zip": "^7.4.0",
-        "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
-        "@electron-forge/plugin-fuses": "^7.4.0",
-        "@electron-forge/plugin-vite": "^7.4.0",
-        "@electron/fuses": "^1.7.0",
+        "@electron-forge/cli": "^7.10.2",
+        "@electron-forge/maker-deb": "^7.10.2",
+        "@electron-forge/maker-dmg": "^7.10.2",
+        "@electron-forge/maker-rpm": "^7.10.2",
+        "@electron-forge/maker-squirrel": "^7.10.2",
+        "@electron-forge/maker-wix": "^7.10.2",
+        "@electron-forge/maker-zip": "^7.10.2",
+        "@electron-forge/plugin-auto-unpack-natives": "^7.10.2",
+        "@electron-forge/plugin-fuses": "^7.10.2",
+        "@electron-forge/plugin-vite": "^7.10.2",
+        "@electron/fuses": "^1.8.0",
         "@tailwindcss/typography": "^0.5.12",
         "@testing-library/dom": "^10.4.1",
         "@testing-library/jest-dom": "^6.7.0",
@@ -53,7 +53,7 @@
         "@typescript-eslint/parser": "^7.11.0",
         "@vitest/ui": "^3.2.4",
         "autoprefixer": "^10.4.17",
-        "electron": "29.2.0",
+        "electron": "39.2.7",
         "eslint": "^8.0.1",
         "eslint-import-resolver-alias": "^1.1.2",
         "eslint-plugin-import": "^2.25.0",
@@ -72,7 +72,7 @@
     },
     "dependencies": {
         "@ai-sdk/openai": "^2.0.52",
-        "@electron-forge/publisher-github": "^7.4.0",
+        "@electron-forge/publisher-github": "^7.10.2",
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
         "@floating-ui/react": "^0.26.9",
         "@hookform/resolvers": "^5.2.2",
@@ -109,7 +109,7 @@
         "@vitejs/plugin-react": "^4.2.1",
         "ai": "^5.0.76",
         "axios": "^1.6.8",
-        "better-sqlite3": "^9.4.0",
+        "better-sqlite3": "^12.5.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.0",
         "cmdk": "^1.1.1",
@@ -175,5 +175,9 @@
         "zod-to-json-schema": "^3.22.5",
         "zustand": "^4.4.7",
         "zx": "^8.0.2"
+    },
+    "resolutions": {
+        "@electron/rebuild": "^4.0.2",
+        "node-abi": "^4.24.0"
     }
 }
