--- a/package.json
+++ b/package.json
@@ -46,12 +46,13 @@
         "@types/lodash": "^4.17.20",
         "@types/object-hash": "^3.0.6",
         "@types/parse-filepath": "^1.0.2",
-        "@types/react-dom": "^18.2.24",
+        "@types/react": "^19.2.7",
+        "@types/react-dom": "^19.2.3",
         "@types/react-syntax-highlighter": "^15.5.11",
         "@types/xlsx": "^0.0.36",
         "@typescript-eslint/eslint-plugin": "^7.11.0",
         "@typescript-eslint/parser": "^7.11.0",
-        "@vitest/ui": "^3.2.4",
+        "@vitest/ui": "^4.0.15",
         "autoprefixer": "^10.4.17",
         "electron": "39.2.7",
         "eslint": "^8.0.1",
@@ -60,15 +61,15 @@
         "eslint-plugin-jsx-a11y": "^6.8.0",
         "eslint-plugin-react": "^7.34.2",
         "eslint-plugin-react-hooks": "^4.6.2",
-        "jsdom": "^26.1.0",
+        "jsdom": "^27.3.0",
         "postcss": "^8.4.33",
         "tailwind-scrollbar": "^3.1.0",
         "tailwindcss": "^3.4.3",
         "ts-node": "^10.9.2",
-        "typescript": "^5.4.5",
-        "vite": "^5.0.12",
+        "typescript": "^5.9.3",
+        "vite": "^7.2.7",
         "vite-plugin-wasm": "^3.5.0",
-        "vitest": "^1.3.1"
+        "vitest": "^4.0.15"
     },
     "dependencies": {
         "@ai-sdk/openai": "^2.0.52",
@@ -106,7 +107,7 @@
         "@turf/turf": "^6.5.0",
         "@types/fluent-ffmpeg": "^2.1.24",
         "@uidotdev/usehooks": "^2.4.1",
-        "@vitejs/plugin-react": "^4.2.1",
+        "@vitejs/plugin-react": "^5.1.2",
         "ai": "^5.0.76",
         "axios": "^1.6.8",
         "better-sqlite3": "^12.5.0",
@@ -143,9 +144,9 @@
         "object-hash": "^3.0.0",
         "openai": "^4.32.1",
         "progress": "^2.0.3",
-        "react": "^18.2.0",
+        "react": "^19.2.3",
         "react-day-picker": "^9.11.1",
-        "react-dom": "^18.2.0",
+        "react-dom": "^19.2.3",
         "react-error-boundary": "^4.0.13",
         "react-hook-form": "^7.65.0",
         "react-hot-toast": "^2.4.1",
@@ -157,14 +158,14 @@
         "react-router-dom": "^6.21.0",
         "react-split": "^2.0.14",
         "react-syntax-highlighter": "^15.5.0",
-        "react-virtuoso": "^4.14.0",
+        "react-virtuoso": "^4.17.0",
         "recharts": "2.15.4",
         "reflect-metadata": "^0.2.2",
         "remark-gfm": "^4.0.0",
         "remark-math": "^6.0.0",
         "sherpa-onnx-node": "^1.12.11",
         "sonner": "^2.0.7",
-        "swr": "^2.2.5",
+        "swr": "^2.3.7",
         "tailwind-merge": "^2.2.1",
         "tailwindcss-animate": "^1.0.7",
         "tencentcloud-sdk-nodejs": "^4.0.764",
@@ -173,7 +174,7 @@
         "xlsx": "^0.18.5",
         "zod": "^4.1.12",
         "zod-to-json-schema": "^3.22.5",
-        "zustand": "^4.4.7",
+        "zustand": "^5.0.9",
         "zx": "^8.0.2"
     },
     "resolutions": {
