--- a/package.json
+++ b/package.json
@@ -1,184 +1,184 @@
 {
-    "name": "dash-player",
-    "productName": "DashPlayer",
-    "version": "5.1.8",
-    "description": "My Electron application description",
-    "main": ".vite/build/main.js",
-    "scripts": {
-        "download": "zx ./scripts/download.mjs",
-        "start": "yarn run download && electron-forge start",
-        "package": "yarn run download && electron-forge package",
-        "make": "yarn run download && electron-forge make",
-        "publish": "yarn run download && electron-forge publish",
-        "lint": "eslint --ext .ts,.tsx .",
-        "test": "vitest",
-        "test:ui": "vitest --ui",
-        "test:run": "vitest run",
-        "test:coverage": "vitest run --coverage",
-        "test:watch": "vitest --watch"
-    },
-    "keywords": [],
-    "author": {
-        "name": "solidSpoon",
-        "email": "cedarrival@outlook.com"
-    },
-    "license": "MIT",
-    "devDependencies": {
-        "@electron-forge/cli": "^7.10.2",
-        "@electron-forge/maker-deb": "^7.10.2",
-        "@electron-forge/maker-dmg": "^7.10.2",
-        "@electron-forge/maker-rpm": "^7.10.2",
-        "@electron-forge/maker-squirrel": "^7.10.2",
-        "@electron-forge/maker-wix": "^7.10.2",
-        "@electron-forge/maker-zip": "^7.10.2",
-        "@electron-forge/plugin-auto-unpack-natives": "^7.10.2",
-        "@electron-forge/plugin-fuses": "^7.10.2",
-        "@electron-forge/plugin-vite": "^7.10.2",
-        "@electron/fuses": "^1.8.0",
-        "@tailwindcss/typography": "^0.5.12",
-        "@testing-library/dom": "^10.4.1",
-        "@testing-library/jest-dom": "^6.7.0",
-        "@testing-library/react": "^16.3.0",
-        "@testing-library/user-event": "^14.6.1",
-        "@types/better-sqlite3": "^7.6.10",
-        "@types/common-tags": "^1.8.4",
-        "@types/ffprobe-static": "^2.0.3",
-        "@types/lodash": "^4.17.20",
-        "@types/object-hash": "^3.0.6",
-        "@types/parse-filepath": "^1.0.2",
-        "@types/react": "^19.2.7",
-        "@types/react-dom": "^19.2.3",
-        "@types/react-syntax-highlighter": "^15.5.11",
-        "@types/xlsx": "^0.0.36",
-        "@typescript-eslint/eslint-plugin": "^7.11.0",
-        "@typescript-eslint/parser": "^7.11.0",
-        "@vitest/ui": "^4.0.15",
-        "autoprefixer": "^10.4.17",
-        "electron": "39.2.7",
-        "eslint": "^8.0.1",
-        "eslint-import-resolver-alias": "^1.1.2",
-        "eslint-plugin-import": "^2.25.0",
-        "eslint-plugin-jsx-a11y": "^6.8.0",
-        "eslint-plugin-react": "^7.34.2",
-        "eslint-plugin-react-hooks": "^4.6.2",
-        "jsdom": "^27.3.0",
-        "postcss": "^8.4.33",
-        "tailwind-scrollbar": "^3.1.0",
-        "tailwindcss": "^3.4.3",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.9.3",
-        "vite": "^7.2.7",
-        "vite-plugin-wasm": "^3.5.0",
-        "vitest": "^4.0.15"
-    },
-    "dependencies": {
-        "@ai-sdk/openai": "^2.0.52",
-        "@electron-forge/publisher-github": "^7.10.2",
-        "@ffmpeg-installer/ffmpeg": "^1.1.0",
-        "@floating-ui/react": "^0.26.9",
-        "@hookform/resolvers": "^5.2.2",
-        "@radix-ui/react-accordion": "^1.2.12",
-        "@radix-ui/react-alert-dialog": "^1.1.15",
-        "@radix-ui/react-aspect-ratio": "^1.1.7",
-        "@radix-ui/react-avatar": "^1.1.10",
-        "@radix-ui/react-checkbox": "^1.3.3",
-        "@radix-ui/react-collapsible": "^1.1.12",
-        "@radix-ui/react-context-menu": "^2.2.16",
-        "@radix-ui/react-dialog": "^1.1.15",
-        "@radix-ui/react-dropdown-menu": "^2.1.16",
-        "@radix-ui/react-hover-card": "^1.1.15",
-        "@radix-ui/react-label": "^2.1.7",
-        "@radix-ui/react-menubar": "^1.1.16",
-        "@radix-ui/react-navigation-menu": "^1.2.14",
-        "@radix-ui/react-popover": "^1.1.15",
-        "@radix-ui/react-progress": "^1.1.7",
-        "@radix-ui/react-radio-group": "^1.3.8",
-        "@radix-ui/react-scroll-area": "^1.2.10",
-        "@radix-ui/react-select": "^2.2.6",
-        "@radix-ui/react-separator": "^1.1.7",
-        "@radix-ui/react-slider": "^1.3.6",
-        "@radix-ui/react-slot": "^1.2.3",
-        "@radix-ui/react-switch": "^1.2.6",
-        "@radix-ui/react-tabs": "^1.1.13",
-        "@radix-ui/react-toast": "^1.1.5",
-        "@radix-ui/react-toggle": "^1.1.10",
-        "@radix-ui/react-toggle-group": "^1.1.11",
-        "@radix-ui/react-tooltip": "^1.2.8",
-        "@turf/turf": "^6.5.0",
-        "@types/fluent-ffmpeg": "^2.1.24",
-        "@uidotdev/usehooks": "^2.4.1",
-        "@vitejs/plugin-react": "^5.1.2",
-        "ai": "^5.0.76",
-        "axios": "^1.6.8",
-        "better-sqlite3": "^12.5.0",
-        "class-variance-authority": "^0.7.1",
-        "clsx": "^2.1.0",
-        "cmdk": "^1.1.1",
-        "common-tags": "^1.8.2",
-        "compare-versions": "^6.1.0",
-        "compromise": "^14.12.0",
-        "date-fns": "^4.1.0",
-        "drizzle-kit": "^0.26.2",
-        "drizzle-orm": "^0.35.2",
-        "echogarden": "^2.10.1",
-        "electron-log": "^5.2.0",
-        "electron-squirrel-startup": "^1.0.0",
-        "electron-store": "^8.1.0",
-        "embla-carousel-react": "^8.6.0",
-        "ffmpeg-static": "^5.2.0",
-        "ffprobe-static": "^3.1.0",
-        "fluent-ffmpeg": "^2.1.2",
-        "framer-motion": "^10.16.16",
-        "hi-base32": "^0.5.1",
-        "iconv-lite": "^0.6.3",
-        "input-otp": "^1.4.2",
-        "inversify": "^6.0.2",
-        "jschardet": "^3.1.2",
-        "leven": "^3.1.0",
-        "lodash": "^4.17.21",
-        "lucide-react": "^0.546.0",
-        "moment": "^2.30.1",
-        "monaco-editor": "^0.45.0",
-        "next-themes": "^0.4.6",
-        "node-sql-parser": "^4.17.0",
-        "object-hash": "^3.0.0",
-        "openai": "^4.32.1",
-        "progress": "^2.0.3",
-        "react": "^19.2.3",
-        "react-day-picker": "^9.11.1",
-        "react-dom": "^19.2.3",
-        "react-error-boundary": "^4.0.13",
-        "react-hook-form": "^7.65.0",
-        "react-hot-toast": "^2.4.1",
-        "react-hotkeys-hook": "^4.5.0",
-        "react-icons": "^4.12.0",
-        "react-markdown": "^9.0.1",
-        "react-player": "^2.14.1",
-        "react-resizable-panels": "^3.0.6",
-        "react-router-dom": "^6.21.0",
-        "react-split": "^2.0.14",
-        "react-syntax-highlighter": "^15.5.0",
-        "react-virtuoso": "^4.17.0",
-        "recharts": "2.15.4",
-        "reflect-metadata": "^0.2.2",
-        "remark-gfm": "^4.0.0",
-        "remark-math": "^6.0.0",
-        "sherpa-onnx-node": "^1.12.11",
-        "sonner": "^2.0.7",
-        "swr": "^2.3.7",
-        "tailwind-merge": "^2.2.1",
-        "tailwindcss-animate": "^1.0.7",
-        "tencentcloud-sdk-nodejs": "^4.0.764",
-        "ts-error": "^1.0.6",
-        "vaul": "^1.1.2",
-        "xlsx": "^0.18.5",
-        "zod": "^4.1.12",
-        "zod-to-json-schema": "^3.22.5",
-        "zustand": "^5.0.9",
-        "zx": "^8.0.2"
-    },
-    "resolutions": {
-        "@electron/rebuild": "^4.0.2",
-        "node-abi": "^4.24.0"
-    }
+  "name": "dash-player",
+  "productName": "DashPlayer",
+  "version": "5.1.8",
+  "description": "My Electron application description",
+  "main": ".vite/build/main.js",
+  "scripts": {
+    "download": "zx ./scripts/download.mjs",
+    "start": "yarn run download && electron-forge start",
+    "package": "yarn run download && electron-forge package",
+    "make": "yarn run download && electron-forge make",
+    "publish": "yarn run download && electron-forge publish",
+    "lint": "eslint --ext .ts,.tsx src",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest --watch"
+  },
+  "keywords": [],
+  "author": {
+    "name": "solidSpoon",
+    "email": "cedarrival@outlook.com"
+  },
+  "license": "MIT",
+  "devDependencies": {
+    "@electron-forge/cli": "^7.10.2",
+    "@electron-forge/maker-deb": "^7.10.2",
+    "@electron-forge/maker-dmg": "^7.10.2",
+    "@electron-forge/maker-rpm": "^7.10.2",
+    "@electron-forge/maker-squirrel": "^7.10.2",
+    "@electron-forge/maker-wix": "^7.10.2",
+    "@electron-forge/maker-zip": "^7.10.2",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.10.2",
+    "@electron-forge/plugin-fuses": "^7.10.2",
+    "@electron-forge/plugin-vite": "^7.10.2",
+    "@electron/fuses": "^1.8.0",
+    "@tailwindcss/typography": "^0.5.12",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/better-sqlite3": "^7.6.10",
+    "@types/common-tags": "^1.8.4",
+    "@types/ffprobe-static": "^2.0.3",
+    "@types/lodash": "^4.17.20",
+    "@types/object-hash": "^3.0.6",
+    "@types/parse-filepath": "^1.0.2",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@types/react-syntax-highlighter": "^15.5.11",
+    "@types/xlsx": "^0.0.36",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
+    "@vitest/ui": "^4.0.15",
+    "autoprefixer": "^10.4.17",
+    "electron": "39.2.7",
+    "eslint": "^8.0.1",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.25.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "jsdom": "^27.3.0",
+    "postcss": "^8.4.33",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "^3.4.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3",
+    "vite": "^7.2.7",
+    "vite-plugin-wasm": "^3.5.0",
+    "vitest": "^4.0.15"
+  },
+  "dependencies": {
+    "@ai-sdk/openai": "^2.0.52",
+    "@electron-forge/publisher-github": "^7.10.2",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@floating-ui/react": "^0.26.9",
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-context-menu": "^2.2.16",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-menubar": "^1.1.16",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@turf/turf": "^6.5.0",
+    "@types/fluent-ffmpeg": "^2.1.24",
+    "@uidotdev/usehooks": "^2.4.1",
+    "@vitejs/plugin-react": "^5.1.2",
+    "ai": "^5.0.76",
+    "axios": "^1.6.8",
+    "better-sqlite3": "^12.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.0",
+    "cmdk": "^1.1.1",
+    "common-tags": "^1.8.2",
+    "compare-versions": "^6.1.0",
+    "compromise": "^14.12.0",
+    "date-fns": "^4.1.0",
+    "drizzle-kit": "^0.26.2",
+    "drizzle-orm": "^0.35.2",
+    "echogarden": "^2.10.1",
+    "electron-log": "^5.2.0",
+    "electron-squirrel-startup": "^1.0.0",
+    "electron-store": "^8.1.0",
+    "embla-carousel-react": "^8.6.0",
+    "ffmpeg-static": "^5.2.0",
+    "ffprobe-static": "^3.1.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "framer-motion": "^10.16.16",
+    "hi-base32": "^0.5.1",
+    "iconv-lite": "^0.6.3",
+    "input-otp": "^1.4.2",
+    "inversify": "^6.0.2",
+    "jschardet": "^3.1.2",
+    "leven": "^3.1.0",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.546.0",
+    "moment": "^2.30.1",
+    "monaco-editor": "^0.45.0",
+    "next-themes": "^0.4.6",
+    "node-sql-parser": "^4.17.0",
+    "object-hash": "^3.0.0",
+    "openai": "^4.32.1",
+    "progress": "^2.0.3",
+    "react": "^19.2.3",
+    "react-day-picker": "^9.11.1",
+    "react-dom": "^19.2.3",
+    "react-error-boundary": "^4.0.13",
+    "react-hook-form": "^7.65.0",
+    "react-hot-toast": "^2.4.1",
+    "react-hotkeys-hook": "^4.5.0",
+    "react-icons": "^4.12.0",
+    "react-markdown": "^9.0.1",
+    "react-player": "^2.14.1",
+    "react-resizable-panels": "^3.0.6",
+    "react-router-dom": "^6.21.0",
+    "react-split": "^2.0.14",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-virtuoso": "^4.17.0",
+    "recharts": "2.15.4",
+    "reflect-metadata": "^0.2.2",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
+    "sherpa-onnx-node": "^1.12.11",
+    "sonner": "^2.0.7",
+    "swr": "^2.3.7",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "tencentcloud-sdk-nodejs": "^4.0.764",
+    "ts-error": "^1.0.6",
+    "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
+    "zod": "^4.1.12",
+    "zod-to-json-schema": "^3.22.5",
+    "zustand": "^5.0.9",
+    "zx": "^8.0.2"
+  },
+  "resolutions": {
+    "@electron/rebuild": "^4.0.2",
+    "node-abi": "^4.24.0"
+  }
 }
