--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "package": "yarn run download && electron-forge package",
     "make": "yarn run download && electron-forge make",
     "publish": "yarn run download && electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx src",
-    "lint:compiler": "eslint -c .eslintrc.react-compiler.json --ext .ts,.tsx src",
+    "lint": "eslint -c .eslintrc.react-compiler.json --ext .ts,.tsx src",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
