feat: adapt nano image skill for uniapi

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,7 @@ DP_LOG_FOCUS_TOKEN=
 VITE_DP_LOG_INCLUDE_MODULES=
 VITE_DP_LOG_EXCLUDE_MODULES=
 VITE_DP_LOG_FOCUS_TOKEN=
+
+# Nano Image Generator 配置（项目内 skill 使用）
+APIKEY=
+BASEURL=https://generativelanguage.googleapis.com/v1beta/models
